<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ico_menu_home"
        android:title="@string/txt_menu_home"/>

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ico_menu_explore"
        android:title="@string/txt_menu_explore"/>

    <item
        android:enabled="false"
        android:title="@null" />

    <item
        android:id="@+id/navigation_discussion"
        android:icon="@drawable/ico_menu_discussion"
        android:title="@string/txt_menu_discussion"/>
    <item
        android:id="@+id/navigation_myHealthInfo"
        android:icon="@drawable/health_info"
        android:title="@string/txt_menu_health_info"/>
</menu>